--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -242,7 +242,53 @@
 </section>
 <!--/立即预约-->
 <!--产品推荐-->
-<section id="products"></section>
+<section id="products">
+
+    <div class="container">
+            <!-- 标签页 -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#product1" aria-controls="home" role="tab" data-toggle="tab">特别推荐</a></li>
+                <li role="presentation"><a href="#product2" aria-controls="profile" role="tab" data-toggle="tab">微投资</a></li>
+                <li role="presentation"><a href="#product3" aria-controls="messages" role="tab" data-toggle="tab">微小宝</a></li>
+                <li role="presentation"><a href="#product4" aria-controls="settings" role="tab" data-toggle="tab">微消费</a></li>
+                <li role="presentation"><a href="#product5" aria-controls="settings" role="tab" data-toggle="tab">微增利</a></li>
+                <li role="presentation"><a href="#product6" aria-controls="settings" role="tab" data-toggle="tab">微金宝</a></li>
+                <li role="presentation"><a href="#product7" aria-controls="settings" role="tab" data-toggle="tab">微转让</a></li>
+                <li role="presentation" class="pull-right"><a href="#product8" aria-controls="settings" role="tab" data-toggle="tab">微转让</a></li>
+            </ul>
+
+            <!-- 标签页的内容 -->
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane fade in active" id="product1">
+                <div class="row">
+                    <div class="col-md-4 col-sm-6"></div>
+                    <div class="col-md-4 col-sm-6"></div>
+                    <div class="col-md-4 col-sm-6"></div>
+                    <div class="col-md-4 col-sm-6"></div>
+                    <div class="col-md-4 col-sm-6"></div>
+                    <div class="col-md-4 col-sm-6"></div>
+                </div>
+                </div>
+                <div role="tabpanel" class="tab-pane fade" id="product2">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-6"></div>
+                        <div class="col-md-4 col-sm-6"></div>
+                        <div class="col-md-4 col-sm-6"></div>
+                        <div class="col-md-4 col-sm-6"></div>
+                        <div class="col-md-4 col-sm-6"></div>
+                        <div class="col-md-4 col-sm-6"></div>
+                    </div>
+                </div>
+                <div role="tabpanel" class="tab-pane fade" id="product3">3</div>
+                <div role="tabpanel" class="tab-pane fade" id="product4">4</div>
+                <div role="tabpanel" class="tab-pane fade" id="product5">5</div>
+                <div role="tabpanel" class="tab-pane fade" id="product6">6</div>
+                <div role="tabpanel" class="tab-pane fade" id="product7">7</div>
+                <div role="tabpanel" class="tab-pane fade" id="product8">8</div>
+            </div>
+    </div>
+
+</section>
 <!--/产品推荐-->
 <!--新闻板块-->
 <section id="news"></section>
