20170502晚BOOTSTRAP内容更新

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -261,12 +261,74 @@
             <div class="tab-content">
                 <div role="tabpanel" class="tab-pane fade in active" id="product1">
                 <div class="row">
-                    <div class="col-md-4 col-sm-6"></div>
-                    <div class="col-md-4 col-sm-6"></div>
-                    <div class="col-md-4 col-sm-6"></div>
-                    <div class="col-md-4 col-sm-6"></div>
-                    <div class="col-md-4 col-sm-6"></div>
-                    <div class="col-md-4 col-sm-6"></div>
+                    <div class="col-md-4 col-sm-6">
+
+                        <div class="panel panel-default red">
+                            <div class="panel-heading">
+                                <h3 class="panel-title text-center"><strong>8</strong><sub>%</sub></h3>
+                                <p class="text-center">年利率</p>
+                            </div>
+                            <div class="panel-body">
+                                Panel content
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title text-center"><strong>8</strong><sub>%</sub></h3>
+                                <p class="text-center">年利率</p>
+                            </div>
+                            <div class="panel-body">
+                                Panel content
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title text-center"><strong>8</strong><sub>%</sub></h3>
+                                <p class="text-center">年利率</p>
+                            </div>
+                            <div class="panel-body">
+                                Panel content
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title text-center"><strong>8</strong><sub>%</sub></h3>
+                                <p class="text-center">年利率</p>
+                            </div>
+                            <div class="panel-body">
+                                Panel content
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title text-center"><strong>8</strong><sub>%</sub></h3>
+                                <p class="text-center">年利率</p>
+                            </div>
+                            <div class="panel-body">
+                                Panel content
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title text-center"><strong>8</strong><sub>%</sub></h3>
+                                <p class="text-center">年利率</p>
+                            </div>
+                            <div class="panel-body">
+                                Panel content
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 </div>
                 <div role="tabpanel" class="tab-pane fade" id="product2">
