--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -269,7 +269,26 @@
                                 <p class="text-center">年利率</p>
                             </div>
                             <div class="panel-body">
-                                Panel content
+                                <h4>新手体验标008期</h4>
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
 
@@ -281,7 +300,25 @@
                                 <p class="text-center">年利率</p>
                             </div>
                             <div class="panel-body">
-                                Panel content
+                                <h4>新手体验标008期</h4>
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -292,7 +329,25 @@
                                 <p class="text-center">年利率</p>
                             </div>
                             <div class="panel-body">
-                                Panel content
+                                <h4>新手体验标008期</h4>
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -303,7 +358,25 @@
                                 <p class="text-center">年利率</p>
                             </div>
                             <div class="panel-body">
-                                Panel content
+                                <h4>新手体验标008期</h4>
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -314,18 +387,57 @@
                                 <p class="text-center">年利率</p>
                             </div>
                             <div class="panel-body">
-                                Panel content
+                                <h4>新手体验标008期</h4>
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="panel panel-default">
                             <div class="panel-heading">
+                                <p class="tool">
+                                    <a href="#" data-toggle="tooltip" data-placement="top" title="Tooltip on top">中</a><a href="#" data-toggle="tooltip" data-placement="top" title="Tooltip on top">美</a>
+                                </p>
                                 <h3 class="panel-title text-center"><strong>8</strong><sub>%</sub></h3>
                                 <p class="text-center">年利率</p>
                             </div>
                             <div class="panel-body">
-                                Panel content
+                                <h4>新手体验标008期</h4>
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>起步价</p>
+                                        <p><strong>1000.00</strong><sub>万</sub></p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -353,15 +465,84 @@
 </section>
 <!--/产品推荐-->
 <!--新闻板块-->
-<section id="news"></section>
+<section id="news">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2 col-md-offset-2">
+                <h4 class="news-title text-center">全部新闻</h4>
+            </div>
+            <div class="col-md-1">
+                <!-- Nav tabs -->
+                <ul class="nav nav-tabs" role="tablist">
+                    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab"><i class="icon-news01"></i></a></li>
+                    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab"><i class="icon-news02"></i></a></li>
+                    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab"><i class="icon-news03"></i></a></li>
+                    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><i class="icon-news04"></i></a></li>
+                </ul>
+            </div>
+            <div class="col-md-7">
+                <!-- Tab panes -->
+                <div class="tab-content">
+                    <div role="tabpanel" class="tab-pane fade in active" id="home">
+                        <ul>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                        </ul>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="profile">
+                        <ul>
+                            <li>这是一个测试新闻第二条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                            <li>这是一个测试新闻第一条</li>
+                        </ul>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="messages">3</div>
+                    <div role="tabpanel" class="tab-pane fade" id="settings">4</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <!--/新闻板块-->
 <!--合作伙伴-->
-<footer id="partner"></footer>
+<footer id="partner">
+    <div class="container">
+        <h3 class="title text-center">合作伙伴</h3>
+        <ul>
+            <li><a href=""><i class="icon-uniE931"></i></a></li>
+            <li><a href=""><i class="icon-uniE932"></i></a></li>
+            <li><a href=""><i class="icon-uniE933"></i></a></li>
+            <li><a href=""><i class="icon-uniE934"></i></a></li>
+            <li><a href=""><i class="icon-uniE935"></i></a></li>
+            <li><a href=""><i class="icon-uniE936"></i></a></li>
+            <li><a href=""><i class="icon-uniE937"></i></a></li>
+            <li><a href=""><i class="icon-uniE937"></i></a></li>
+            <li><a href=""><i class="icon-uniE937"></i></a></li>
+        </ul>
+    </div>
+
+</footer>
 <!--/合作伙伴-->
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="lib/jquery/jquery.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="lib/bootstrap/js/bootstrap.js"></script>
+<script src = "js/index.js"></script>
 </body>
 </html>
