--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -22,7 +22,7 @@
 <body>
 <!--头部区域-->
 <header id="header">
-    <div class="topbar">
+    <div class="topbar hidden-xs hidden-sm">
         <div class="container">
             <div class="row">
                 <div class="col-md-2 text-center">
@@ -78,7 +78,7 @@
 
                 </ul>
 
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right hidden-xs hidden-sm">
                     <li><a href="#">个人中心</a></li>
 
                 </ul>
@@ -141,7 +141,7 @@
 </section>
 <!--/广告轮播-->
 <!--特色介绍-->
-<section id="feature">
+<section id="feature" class="hidden-sm hidden-xs">
     <div class="container">
         <div class="col-md-4 col-sm-6">
             <div class="media">
@@ -237,7 +237,7 @@
             <i class="icon-uniE906"></i>
             现在有<span>458</span>人在排队，累计预约交易成功<span>7409</span>次。 什么是预约投标？ <a href="#">立即预约</a>
         </p>
-        <p class="pull-right"><i class="icon-uniE905"></i><a href="#"> 微金所企业旋转片</a></p>
+        <p class="pull-right hidden-sm hidden-xs"><i class="icon-uniE905"></i><a href="#"> 微金所企业旋转片</a></p>
     </div>
 </section>
 <!--/立即预约-->
@@ -520,7 +520,7 @@
 </section>
 <!--/新闻板块-->
 <!--合作伙伴-->
-<footer id="partner">
+<footer id="partner" class="hidden-sm hidden-xs">
     <div class="container">
         <h3 class="title text-center">合作伙伴</h3>
         <ul>
