--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -102,25 +102,25 @@
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
-            <div class="item active" style="background-image: url(img/slide_01_2000x410.jpg)">
+            <div class="item active"  data-large-img = "img/slide_01_2000x410.jpg" data-small-img = "img/slide_01_640x340.jpg">
                 <!--<img src="img/slide_01_2000x410.jpg">-->
                 <!--<div class="carousel-caption">-->
                     <!--...-->
                 <!--</div>-->
             </div>
-            <div class="item" style="background-image: url(img/slide_02_2000x410.jpg)">
+            <div class="item"  data-large-img = "img/slide_02_2000x410.jpg" data-small-img = "img/slide_02_640x340.jpg">
                 <!--<img src="img/slide_02_2000x410.jpg">-->
                 <!--<div class="carousel-caption">-->
                     <!--...-->
                 <!--</div>-->
             </div>
-            <div class="item" style="background-image: url(img/slide_03_2000x410.jpg)">
+            <div class="item"  data-large-img = "img/slide_03_2000x410.jpg" data-small-img = "img/slide_03_640x340.jpg">
                 <!--<img src="img/slide_03_2000x410.jpg">-->
                 <!--<div class="carousel-caption">-->
                     <!--...-->
                 <!--</div>-->
             </div>
-            <div class="item" style="background-image: url(img/slide_04_2000x410.jpg)">
+            <div class="item"  data-large-img = "img/slide_04_2000x410.jpg" data-small-img = "img/slide_04_640x340.jpg">
                 <!--<img src="img/slide_04_2000x410.jpg">-->
                 <!--<div class="carousel-caption">-->
                     <!--...-->
