--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <nav class="navbar navbar-itcast">
+    <nav class="navbar navbar-itcast" data-spy="affix" data-offset-top="200" data-offset-bottom="600">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -245,6 +245,7 @@
 <section id="products">
 
     <div class="container">
+            <div class="ul-wraper">
             <!-- 标签页 -->
             <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#product1" aria-controls="home" role="tab" data-toggle="tab">特别推荐</a></li>
@@ -256,6 +257,7 @@
                 <li role="presentation"><a href="#product7" aria-controls="settings" role="tab" data-toggle="tab">微转让</a></li>
                 <li role="presentation" class="pull-right"><a href="#product8" aria-controls="settings" role="tab" data-toggle="tab">微转让</a></li>
             </ul>
+            </div>
 
             <!-- 标签页的内容 -->
             <div class="tab-content">
