--- a/code06/1/01-复习-JavaScript的类型.html
+++ b/code06/1/01-复习-JavaScript的类型.html
@@ -14,11 +14,11 @@
 		// typeof 
 		console.log(typeof "串串");
 
-		/*// 复杂数据类型
+		// 复杂数据类型
 		// Object Function Array Date Math RegExp String Number Boolean
 		
 		// 以下类型都是 object
-		console.log(typeof new Object);
+		console.log(typeof new Object());
 		console.log(typeof new Array());
 		console.log(typeof new Date());
 		console.log(typeof new RegExp());
@@ -28,9 +28,9 @@
 		console.log(typeof Math); // 就是一个对象 不能new
 
 		// 函数的类型是 function
-		console.log(typeof new Function());*/
+		console.log(typeof new Function());
 
-		console.log(typeof (typeof "abc"));
+		//console.log(typeof (typeof "abc"));
 	</script>
 </body>
 </html>
