--- a/code06/1/06-引用类型和值类型的区别.html
+++ b/code06/1/06-引用类型和值类型的区别.html
@@ -17,11 +17,11 @@
 		// 包括：Object Function Array Date Math RegExp String Number Boolean
 		
 
-		/*var num = 123;
+		var num = 123;
 		console.log(typeof num); // number
 
 		var num1 = new Number(123);
-		console.log(typeof num1); // object*/
+		console.log(typeof num1); // object
 	</script>
 </body>
 </html>
