--- a/code06/1/07-复习-面试题.html
+++ b/code06/1/07-复习-面试题.html
@@ -7,7 +7,7 @@
 <body>
 	
 	<script type="text/javascript">
-		/*// 1 创建了一个对象
+		// 1 创建了一个对象
 		var o = new Object();
 		// 2 创建一个函数
 		function foo(obj) {
@@ -17,7 +17,7 @@
 		}
 		// 3 调用函数
 		foo(o);
-		console.log(o.name); // ？？？腐女*/
+		console.log(o.name); // ？？？腐女
 
 
 		// 1 简单处理
@@ -32,17 +32,17 @@
 		console.log(o.name); // ？？？腐女*/
 
 		// 2 复杂的情况
-		var o = new Object();
-		// 2 创建一个函数
-		function foo(obj) {
-		    obj.name = "腐女";
-		    
-		    obj = new Object();
-		    obj.name = "屌丝";
-		}
+//		var o = new Object();
+//		// 2 创建一个函数
+//		function foo(obj) {
+//		    obj.name = "腐女";
+//
+//		    obj = new Object();
+//		    obj.name = "屌丝";
+//		}
 		// 3 调用函数
-		foo(o);
-		console.log(o.name); // ？？？腐女
+//		foo(o);
+//		console.log(o.name); // ？？？腐女
 	</script>
 </body>
 </html>
