--- a/code06/1/02-复习-相等和全等的区别.html
+++ b/code06/1/02-复习-相等和全等的区别.html
@@ -11,12 +11,12 @@
 		/*console.log(null === undefined); // false
 		console.log(null == undefined);  // true*/
 
-		/*// 判断两个对象是否相等
+		// 判断两个对象是否相等
 		console.log({} === {});	 // false
-		console.log({} == {});   // false*/
+		console.log({} == {});   // false
 
-		console.log("1" == 1);   // true
-		console.log("1" === 1);  // false
+//		console.log("1" == 1);   // true
+//		console.log("1" === 1);  // false
 	</script>
 </body>
 </html>
