--- a/code06/1/10-复习-delete运算符介绍.html
+++ b/code06/1/10-复习-delete运算符介绍.html
@@ -8,12 +8,12 @@
 	
 	<script type="text/javascript">
 		// delete
-		/*var obj = {age: 19};
-		console.log(obj.age); // 19
-
-		delete obj.age;
-
-		console.log(obj.age);*/
+//		var obj = {age: 19};
+//		console.log(obj.age); // 19
+//
+//		delete obj.age;
+//
+//		console.log(obj.age);
 
 		/*// 全局变量
 		var num = 1;
@@ -28,10 +28,10 @@
 
 
 		// 删除数组中的元素
-		var arr = [1, 2];
-		delete arr[0];
-
-		console.log(arr);
+//		var arr = [1, 2];
+//		delete arr[0];
+//
+//		console.log(arr);
 		
 
 
