--- a/code06/1/20-使用面向对象的方式来组织代码.html
+++ b/code06/1/20-使用面向对象的方式来组织代码.html
@@ -12,7 +12,7 @@
 		// setStyle
 		
 		var itcast = {
-			id: function() {}，
+			id: function() {},
 			tag: function() {},
 			setStyle: function() {}
 		};
