--- a/code06/1/28-属性搜索原则.html
+++ b/code06/1/28-属性搜索原则.html
@@ -10,6 +10,9 @@
 		var Person = function() {
 			// this.age = 19;
 		};
+		var person = function () {
+
+        };
 
 		Person.prototype.age = 0;
 
