--- a/code06/2/02-对象的类型是什么.html
+++ b/code06/2/02-对象的类型是什么.html
@@ -7,12 +7,21 @@
 <body>
 	
 	<script type="text/javascript">
-		var obj = new Object();
-		var arr = new Array();
-		var d = new Date();
+
+
+
+
+//		var obj = new Object();
+//		var arr = new Array();
+//		var d = new Date();
 
 		function Person() {}
 		var p = new Person();
+
+		console.log(p.constructor);
+
+		console.log(p.constructor===Person);
+
 	</script>
 </body>
 </html>
