--- a/code06/2/07-如何获取对象的类型-封装函数.html
+++ b/code06/2/07-如何获取对象的类型-封装函数.html
@@ -81,9 +81,11 @@
 
 		// 不做要求
 		function getName (ctr) {
-			return typeof ctr !== "function" 
-					? "" 
-					: (ctr.name || /function (.+)\(/.exec(ctr + "")[1]);
+//			return typeof ctr !== "function"
+//					? ""
+//					: (ctr.name || /function (.+)\(/.exec(ctr + "")[1]);
+
+			return typeof ctr != "function"?"":(ctr.name||/function (.+)\(/.exec(ctr+""));
 		}
 
 		var n = getName(p.constructor);
