--- a/code06/2/15-经典继承.html
+++ b/code06/2/15-经典继承.html
@@ -10,28 +10,32 @@
 		// 经典继承
 		// Object.create
 		
-		/*// 创建对象的两种方式
+		// 创建对象的两种方式
 		// 1
-		var obj1 = new Object();
+		//var obj1 = new Object();
 
 		// 2
-		var obj2 = {};*/
+		//var obj2 = {};
 
-		/*var o1 = {
-			sayHi: function() {
-				console.log("你愁啥");
-			}
-		};
+//		var o1 = {
+//			sayHi: function() {
+//				console.log("你愁啥");
+//			}
+//		};
 
 		// 作用：
 		// 会创建一个新对象，并且这个新对象会继承自 o1
-		var o2 = Object.create(o1);
+		//var o2 = Object.create(o1);
 
-		o2.sayHi();*/
+		//o2.sayHi();
+
+//		var o2 = Object.create(o1);
+//		o2.sayHi();
 
 
 		// 类型问题
 		function Person() {}
+
 		var p = new Person();
 
 		var p1 = Object.create(p);
