--- a/code06/2/17-原型链介绍.html
+++ b/code06/2/17-原型链介绍.html
@@ -9,14 +9,15 @@
 	<script type="text/javascript">
 		function Person() {}
 
+
 		/*Person.prototype.toString = function() {
 			console.log("这是自己提供的toString方法");
 		};*/
 
-		var p = new Person();
+		//var p = new Person();
 
 		// toString 是由 Object.prototype 提供
-		p.toString();
+		//console.log(p.toString());
 
 
 		var arr = [1, 3, 5, 7];
