--- a/code06/3/04-创建函数的三种方式.html
+++ b/code06/3/04-创建函数的三种方式.html
@@ -15,8 +15,8 @@
 		// foo 可以在任何位置调用（仅仅限于函数声明方式）
 		// foo();
 		// 1
-		// function foo() {}
-		// foo();
+		 function foo() {}
+		 foo();
 		// 
 		
 		// foo();
