--- a/code06/4/09-词法作用域介绍.html
+++ b/code06/4/09-词法作用域介绍.html
@@ -30,12 +30,12 @@
 		// 
 		
 		// var i = 0;
-		/*for(var i = 0; i < 10; i++) {
+		for(var i = 0; i < 10; i++) {
 			
 		}
 		// 在支持块级作用域的语言里面，i只能在for循环内部使用
 		// 在for外部无法使用
-		console.log(i); // 能不能获取到i的值？能， 10*/
+		console.log(i); // 能不能获取到i的值？能， 10
 
 		/*// ES6 添加的一个let关键字 --了解
 		for(let i = 0; i < 10; i++) {
