--- a/code06/5/19-缓存介绍.html
+++ b/code06/5/19-缓存介绍.html
@@ -19,11 +19,11 @@
 		// 1 每次使用都去计算
 		// 2 计算一次，然后，将这个结果缓存起来，
 		// 下次用直接用这个缓存的结果
-		/*var arr = [1,3,5];
+		var arr = [1,3,5];
 		var i = 0, l = arr.length;
 		for(; i < l; i++) {
 			console.log(arr[i]);
-		}*/
+		}
 	</script>
 </body>
 </html>
