--- a/code06/6/04-实现创建数据缓存的方法.html
+++ b/code06/6/04-实现创建数据缓存的方法.html
@@ -89,10 +89,12 @@
 		typeCache("name", "jack");
 		typeCache("age", 19);
 		typeCache("gender", "男");
-		typeCache("name1", "jack");
+		typeCache("name1", "jack1");
+        typeCache("name1", "jack111");
 
 		// 取数据
-		var o = typeCache("name");
+		var o = typeCache("name1");
+		console.log(o);
 
 
 		// 取数据
