--- a/code06/6/07-面试题-补充.html
+++ b/code06/6/07-面试题-补充.html
@@ -29,21 +29,21 @@
 		console.log(b = 9);*/
 
 		// 面试题
-		/*var obj = {};
+		var obj = {};
 		// obj.x = obj = {name: "jack"};
 		obj = obj.x = { name: "jack" };
-		console.log(obj.x); // ？？undefined*/
+		console.log(obj.x); // ？？undefined
 
 		// 面试题-2
-		var a = {
-	        n: 1
-	    };
-	    var b = a;
-	    a.x = a = {
-	        n: 2
-	    };
-	    console.log(a.x);  // undefined
-	    console.log(b.x);  // {n: 2}
+//		var a = {
+//	        n: 1
+//	    };
+//	    var b = a;
+//	    a.x = a = {
+//	        n: 2
+//	    };
+//	    console.log(a.x);  // undefined
+//	    console.log(b.x);  // {n: 2}
 	</script>
 </body>
 </html>
