--- a/code06/7/07-ES5知识补充.html
+++ b/code06/7/07-ES5知识补充.html
@@ -19,33 +19,33 @@
 		// 1 严格模式
 		// 开启严格模式的语法
 		// 
-		// "use strict";
-		// var num = 123;
-		// console.log(num);
+		 "use strict";
+//		 var num = 123;
+//		 console.log(num);
 		
-		// var num = 123;
-		// delete num;
-		// console.log(num);
+//		 var num = 123;
+//		 delete num;
+//		 console.log(num);
 		
-		// if(true) {
-		// 	function fn() {}
-		// }
-		// fn();
+//		 if(true) {
+//		 	function fn() {}
+//		 }
+//		 fn();
 		
-		// eval("var a = 1;");
-		// console.log(a);
+//		 eval("var a = 1;");
+//		 console.log(a);
 		
-		/*function fn() {
+		function fn() {
 			console.log(this);
 		}
-		fn();*/
+		fn();
 
 		// 一般在使用严格模式的时候，是在函数内部使用
-		function fn() {
-			"use strict";
-
-			// 函数内部代码才会遵循严格模式的限制
-		}
+//		function fn() {
+//			"use strict";
+//
+//			// 函数内部代码才会遵循严格模式的限制
+//		}
 
 		// 了解（width）
 		// var obj = {
