--- a/code06/7/11-正则表达式.html
+++ b/code06/7/11-正则表达式.html
@@ -28,10 +28,13 @@
 		// var r = /\d+/;
 		// r.exec()
 
-		// var r = new RegExp("123");
-		var r = new RegExp(/123/);
+		 var r = new RegExp("123");
+		//var r = new RegExp(/123/);
+
 		var ret = r.test("asdfjaskld123jflkasjdklfjal");
+
 		console.log(ret);
+
 	</script>
 </body>
 </html>
