--- a/code06/7/18-正则-分组.html
+++ b/code06/7/18-正则-分组.html
@@ -10,17 +10,18 @@
 		// 分组 ()
 		// var a = (1 + 2) * 3;
 		
-		// 匹配数字 \d （用来匹配一个数组）
+		// 匹配数字 \d （用来匹配一个数字）
+		//
 		// 匹配字母 [a-z]
-		/*var str = "abc123def";
 
+		var str = "abc123def";
 
 		// 分组：小括号的作用就是来分组
 		//       1       2
 		var r = /([a-z]+)(\d+)/;
 		var m = r.exec(str);
 		console.log(m[1]);
-		console.log(m[2]);*/
+		console.log(m[2]);
 
 		//  1 23
 		// /(a((b)c))/
