--- a/code06/7/23-替换.html
+++ b/code06/7/23-替换.html
@@ -11,13 +11,13 @@
 		var str = "abc123def";
 
 		// 字符串的替换方式
-		/*var ret = str.replace("123", "-");
-		console.log(ret);*/
+		//var ret = str.replace("123", "-");
+		//console.log(ret);
 
-		/*var ret = str.replace(/\d+/, "-");
-		console.log(ret);*/
+		//var ret = str.replace(/\d+/, "-");
+		//console.log(ret);
 
-		// var ret = str.replace("123", "-");
+		 //var ret = str.replace("123", "-");
 		var ret = str.replace(/\d/g, "-");
 		console.log(ret);
 	</script>
